fix: update body overflow property to prevent horizontal scrolling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@ body {
   color: #fff;
   background-color: #080411;
   min-height: 100vh;
-  overflow: clip;
+  overflow-x: hidden;
 }
 
 p, h1, h2{
